[package]
name = "flank"
version = "2.2.0"
edition = "2021"
authors = ["Ryan Taylor <2320507+ryantaylor@users.noreply.github.com>"]

description = "CLI parser for Company of Heroes replay files."
homepage = "https://github.com/ryantaylor/flank"
repository = "https://github.com/ryantaylor/flank"
readme = "README.md"
keywords = ["coh", "coh3", "company", "heroes", "replay"]
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1.0"
vault = { version = "6", features = ["serde"] }
